--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Test
-      run: dotnet test Mvvm.Extensions.UnitTests/Mvvm.Extensions.UnitTests.csproj --verbosity normal -c Release
+      run: dotnet test Mapper.Generator.UnitTests/Mapper.Generator.UnitTests.csproj --verbosity normal -c Release
 
   deploy:
     name: .NET 7 Deploy to Nuget package
@@ -34,7 +34,7 @@ jobs:
       with:
         dotnet-version: 7.0.x    
     - name: Pack
-      run: dotnet pack Mvvm.Extensions.Generator/Mvvm.Extensions.Generator.csproj --verbosity normal -c Release /p:PackageReleaseNotes="${{ github.event.head_commit.message }}"
+      run: dotnet pack Mapper.Generator/Mapper.Generator.csproj --verbosity normal -c Release /p:PackageReleaseNotes="${{ github.event.head_commit.message }}"
     - name: Publish to Nuget
       run: |
         package="$(find . -wholename '**/Release/*.nupkg' -exec echo "{}" \;)"
