New features - Support inheritance - Support global mappings assembly level - Attempt to support external types - Optimized with granular property generator - Mapping ignore at class levels. operators won't be generated according the ignore value

--- a/Mapper.Generator/Mapper.Generator.csproj
+++ b/Mapper.Generator/Mapper.Generator.csproj
@@ -26,17 +26,19 @@
 		<PackageTags>Mapper; Source Generator; C#; </PackageTags>
 		<Nullable>enable</Nullable>
 		<RootNamespace>$(MSBuildProjectName.Replace(" ", "."))</RootNamespace>
+		<Title>Mapping Generator</Title>
+		<PackageProjectUrl>https://github.com/pedro-gilmora/Mapper.Generator</PackageProjectUrl>
 	</PropertyGroup>
 
-	<PropertyGroup Condition=" $(Configuration) == 'Test' ">
+	<!--<PropertyGroup Condition=" $(Configuration) == 'Test' ">
 		<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
 		<CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
 	</PropertyGroup>
 
 	<ItemGroup Condition=" $(Configuration) == 'Test' ">
-		<!-- Exclude the output of source generators from the compilation -->
+		--><!-- Exclude the output of source generators from the compilation --><!--
 		<Compile Remove="$(CompilerGeneratedFilesOutputPath)/**/*.cs" />
-	</ItemGroup>
+	</ItemGroup>-->
 
 	<ItemGroup>
 		<None Include="..\ReadMe.md">
