--- a/Mapper.Generator/Mapper.Generator.csproj
+++ b/Mapper.Generator/Mapper.Generator.csproj
@@ -28,7 +28,7 @@
 		<RootNamespace>$(MSBuildProjectName.Replace(" ", "."))</RootNamespace>
 		<Title>Mapping Generator</Title>
 		<PackageProjectUrl>https://github.com/pedro-gilmora/Mapper.Generator</PackageProjectUrl>
-		<PackageIcon>_ccb8f9ef-c476-447d-91d5-18f92d769274.jpeg</PackageIcon>
+		<PackageIcon>logo.jpeg</PackageIcon>
 	</PropertyGroup>
 
 	<!--<PropertyGroup Condition=" $(Configuration) == 'Test' ">
@@ -42,7 +42,7 @@
 	</ItemGroup>-->
 
 	<ItemGroup>
-		<None Include="..\..\..\..\Downloads\_ccb8f9ef-c476-447d-91d5-18f92d769274.jpeg">
+		<None Include="..\logo.jpeg">
 		  <Pack>True</Pack>
 		  <PackagePath>\</PackagePath>
 		</None>
