--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,12 +1,12 @@
-name: 'SourceCrafter.MappingGenerator: Build, test and deploy'
+name: 'SourceCrafter.MappingGenerator: Build, Test & Deploy'
 
 on:
   push:
     branches: [ "**" ]
 
 jobs:
-  build:
-    name: .NET 7 Build
+  try-deliver:
+    name: '.NET 7 Build, Test & Deploy'
     runs-on: 'ubuntu-latest'
 
     steps:      
@@ -23,11 +23,13 @@ jobs:
       run: dotnet test SourceCrafter.MappingGenerator.UnitTests/SourceCrafter.MappingGenerator.UnitTests.csproj --verbosity normal -c Release
 
     - name: Pack
+      if: github.ref_name == 'dev'
       run: |
         without_comma=$(echo "${{ github.event.head_commit.message }}" | sed 's/,/\\u002C/g')
-        dotnet pack Mapper.Generator/Mapper.Generator.csproj --verbosity normal -c Release /p:PackageReleaseNotes="$without_comma"
+        dotnet pack SourceCrafter.MappingGenerator/SourceCrafter.MappingGenerator.csproj --verbosity normal -c Release /p:PackageReleaseNotes="$without_comma"
     
     - name: Publish to Nuget
+      if: github.ref_name == 'dev'
       run: |
         package="$(find . -wholename '**/Release/*.nupkg' -exec echo "{}" \;)"
         dotnet nuget push $package --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
