Use Extensions projects

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,7 +10,18 @@ jobs:
     runs-on: 'ubuntu-latest'
 
     steps:      
+    - name: Get source code
+      uses: actions/checkout@v3
+
     - uses: actions/checkout@v3
+      name: Get extensions source code
+      with:        
+        repository: pedro-gilmora/SourceCrafter.Extensions
+        path: ./SourceCrafter.Extensions
+
+    - name: Move extensions outside
+      run: mv ./SourceCrafter.Extensions ../SourceCrafter.Extensions
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
