--- a/SourceCrafter.MappingGenerator/SourceCrafter.MappingGenerator.csproj
+++ b/SourceCrafter.MappingGenerator/SourceCrafter.MappingGenerator.csproj
@@ -75,9 +75,8 @@
 	<Target Name="GetDependencyTargetPaths">
 		<ItemGroup> 
 			<TargetPathWithTargetPlatformMoniker Include="$(PKGSourceCrafter_Extensions)\lib\netstandard2.0\SourceCrafter.Extensions.dll" IncludeRuntimeDependency="false" />
-      <!-- Pack both our DLL and the dependencies into a generated Nuget Package -->
-      <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
-      <None Include="$(PKGSourceCrafter_Extensions)\lib\netstandard2.0\SourceCrafter.Extensions.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+			<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+			<None Include="$(PKGCore)\lib\netstandard2.0\SourceCrafter.Extensions.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
 		</ItemGroup>
 	</Target>
 
