--- a/SourceCrafter.MappingGenerator/SourceCrafter.Bindings.csproj
+++ b/SourceCrafter.MappingGenerator/SourceCrafter.Bindings.csproj
@@ -30,8 +30,14 @@
 		<PackageIcon>logo.jpeg</PackageIcon>
 		<IsRoslynComponent>true</IsRoslynComponent>
 		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
-		<Configurations>Debug;Release;Pack</Configurations>
+		<Configurations>Debug;Release;Pack;Debug SG</Configurations>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <Compile Remove="Builders\**" />
+	  <EmbeddedResource Remove="Builders\**" />
+	  <None Remove="Builders\**" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<Compile Remove="Extensions.cs" />
@@ -64,29 +70,25 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="SourceCrafter.Extensions" Version="0.23.149.14" GeneratePathProperty="true">
-			<ExcludeAssets Condition=" '$(Configuration)' == 'Pack'">analyzers</ExcludeAssets>
-			<PrivateAssets Condition=" '$(Configuration)' != 'Pack'">none</PrivateAssets>
-		</PackageReference>
 		<PackageReference Include="System.Runtime.InteropServices" Version="4.3.0" />
 	</ItemGroup>
 
 
-	<ItemGroup Condition=" '$(Configuration)' == 'Pack'">
+	<!--<ItemGroup Condition=" '$(Configuration)' == 'Pack'">
 		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
-		<None Include="$(PKGSourceCrafter_Extensions)\lib\netstandard2.0\SourceCrafter.Extensions.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
-	</ItemGroup>
+		--><!--<None Include="$(PKGSourceCrafter_Extensions)\lib\netstandard2.0\SourceCrafter.Extensions.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />--><!--
+	</ItemGroup>-->
 
 
-	<PropertyGroup Condition=" '$(Configuration)' != 'Pack' ">
+	<!--<PropertyGroup Condition=" '$(Configuration)' != 'Pack' ">
 		<GetTargetPathDependsOn>$(GetTargetPathDependsOn);GetDependencyTargetPaths</GetTargetPathDependsOn>
-	</PropertyGroup>
+	</PropertyGroup>-->
 
-	<Target Name="GetDependencyTargetPaths" Condition=" '$(Configuration)' != 'Pack' ">
+	<!--<Target Name="GetDependencyTargetPaths" Condition=" '$(Configuration)' != 'Pack' ">
 		<ItemGroup>
 			<TargetPathWithTargetPlatformMoniker Include="$(PKGSourceCrafter_Extensions)\lib\netstandard2.0\SourceCrafter.Extensions.dll" IncludeRuntimeDependency="true" />
 		</ItemGroup>
-	</Target>
+	</Target>-->
 
 
 </Project>
