--- a/SourceCrafter.MappingGenerator.UnitTests/SourceCrafter.MappingGenerator.UnitTests.csproj
+++ b/SourceCrafter.MappingGenerator.UnitTests/SourceCrafter.MappingGenerator.UnitTests.csproj
@@ -9,15 +9,17 @@
 	</PropertyGroup>
 	
 	<ItemGroup>
-		<PackageReference Include="FluentAssertions" Version="6.11.0" PrivateAssets="all" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+		<PackageReference Include="FluentAssertions" Version="6.12.0" PrivateAssets="all" />
 		<!--<PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.4.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" />-->
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" PrivateAssets="all" />
-		<PackageReference Include="xunit" Version="2.4.2" PrivateAssets="all" />
-		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.5" PrivateAssets="all">
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" PrivateAssets="all" />
+		<PackageReference Include="SourceCrafter.ViewModelGenerator" Version="1.24.70.57" />
+		<PackageReference Include="xunit" Version="2.7.0" PrivateAssets="all" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.5.7" PrivateAssets="all">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="coverlet.collector" Version="6.0.0" PrivateAssets="all">
+		<PackageReference Include="coverlet.collector" Version="6.0.1">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
