--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,41 +40,4 @@ jobs:
       if: always()
       shell: pwsh      
       run: |  
-        function escape {
-          param (
-            [string]$text
-          )
-
-          return $text -replace '([_\*\[\]\(\)~`>#\+\-=|{}\.!])', '\$1'
-        }
-
-        $id = '${{ github.sha }}'.Substring(0,8)
-
-        $status, $icon, $message = if ('${{ job.status }}' -eq 'failure') { 
-          'failed', '💥', "Errors: ${{ steps.build.outputs.errors }}
-            ${{ steps.build.publish.errors }}".Trim()
-        } elseif ('${{ job.status }}' -eq 'success') { 
-          'successfully completed', '✅', $(escape "${{ github.event.head_commit.message }}
-        $([string]::Join(" 
-        ", $(${{ github.event.commits }} | Select -Skip 1 | ForEach-Object { "● $_.message" })))") 
-        } else { 
-          'cancelled', '⛔', 'User aborted the action' 
-        }
-
-        $message = @"
-        🚀$icon *$(escape '${{ github.workflow }}')* #${{ github.run_number }} Build $status
-        👤 *Triggered by:* $(escape '${{ github.actor }}')
-        🌿 *Branch:* $(escape '${{ github.ref }}')
-        🔗 *Change:* [``$id``] 
-        $(escape '$message')"
-
-        $uri = "https://api.telegram.org/bot${{ secrets.TGBOT_TOKEN }}/sendMessage"
-
-        $body = @{
-          chat_id = ${{ secrets.SC_CHATID }}
-          text    = $message
-          parse_mode = 'MarkdownV2'
-          message_thread_id = 4
-        }
-
-        Invoke-RestMethod -Uri $uri -Method Post -Body $body
+        Write-Host "${{ github.event.commits }}"
