--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,5 +12,5 @@ jobs:
 
       - name: Run PowerShell Command
         run: |
-          Write-Host ${{ github.event.commits }} |  Select -Skip 1 | ForEach-Object { "● $(escape $_.message)" })
+          Write-Host $('${{ toJson(github.event.commits) }}' | ConvertFrom-Json) |  ForEach-Object { "● $(escape $_.message)" })
         shell: pwsh
