Nuget packages will be deployed if head commit starts with [Release]. Same for Github Release

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,13 +35,13 @@ jobs:
         dotnet pack SourceCrafter.MappingGenerator/SourceCrafter.Bindings.csproj --verbosity normal -c Pack /p:PackageVersion="$version"
     
     - name: Publish to Nuget
-      if: github.ref_name == 'dev'
+      if: github.ref_name == 'dev' && startsWith(github.event.head_commit.message, '[Release]')
       run: |
         package="$(find . -wholename '**/Pack/*.nupkg' -exec echo "{}" \;)"
         dotnet nuget push $package --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
         
     - name: Notify Release to Github & Telegram
-      if: always()  
+      if: always()
       shell: pwsh
       env:        
          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
@@ -53,13 +53,15 @@ jobs:
           return $text -replace '([_\*\[\]\(\)~`>#\+\-=|{}\.!])', '\$1'
         }
 
+        $headCommit = $( "${{ github.event.head_commit.message }}" -replace '^\[Release\]\s*', '\$1' )
+
         $commits = '${{ toJson(github.event.commits) }}' | ConvertFrom-Json
 
         $status, $icon, $message = if ('${{ job.status }}' -eq 'failure') { 
           'failed', '💥', "Errors: ${{ steps.build.outputs.errors }}
             ${{ steps.build.publish.errors }}".Trim()
         } elseif ('${{ job.status }}' -eq 'success') { 
-          'successfully completed', '✅', '${{ github.event.head_commit.message }}' 
+          'successfully completed', '✅', $headCommit 
         } else { 
           'cancelled', '⛔', 'User aborted the action' 
         }
@@ -70,7 +72,7 @@ jobs:
         🌿 *Branch:* ${{ github.ref_name }}
         🔗 *Change:* *[ $( "${{ github.event.head_commit.id }}".Substring(0,8) ) ]( $(escape "https://github.com/${{ github.event.head_commit.author.username }}") )*
 
-        *$(escape $message)*
+        *$(escape $headCommit)*
 
         $(if($commits.Length -gt 1) { 
         [string]::Join(" 
@@ -91,10 +93,13 @@ jobs:
         }
 
         Invoke-RestMethod -Uri $uri -Method Post -Body $body
-        
-        gh release create "v${{ env.VERSION }}" --latest --title "${{ github.event.head_commit.message }}" --notes $(if($commits.Length -gt 1) { 
+
+        if( "${{ github.event.head_commit.message }}" -match '^\[Release\]\s*' )
+        {
+            gh release create "v${{ env.VERSION }}" --latest --title "$headCommit" --notes $(if($commits.Length -gt 1) { 
         "| Commit    | Message              | Author         |
          |-----------|----------------------|----------------|" +
         [string]::Join(" 
         ", $( $commits | Select-Object -Skip 1 | ForEach-Object { "| [$($_.id.Substring(0,8))]($(escape $_.url)) | $_.message | [$($_.author.username)](https://github.com/$($_.author.username))" }))} 
         else { "" }).Trim()
+        }
