--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -53,7 +53,7 @@ jobs:
           return $text -replace '([_\*\[\]\(\)~`>#\+\-=|{}\.!])', '\$1'
         }
 
-        $headCommit = $( "${{ github.event.head_commit.message }}" -replace '^\[Release\]\s*', '\$1' )
+        $headCommit = $( "${{ github.event.head_commit.message }}" -replace '^\[Release\]\s*', '' )
 
         $commits = '${{ toJson(github.event.commits) }}' | ConvertFrom-Json
 
@@ -98,8 +98,9 @@ jobs:
         {
             gh release create "v${{ env.VERSION }}" --latest --title "$headCommit" --notes $(if($commits.Length -gt 1) { 
         "| Commit    | Message              | Author         |
-         |-----------|----------------------|----------------|" +
-        [string]::Join(" 
-        ", $( $commits | Select-Object -Skip 1 | ForEach-Object { "| [$($_.id.Substring(0,8))]($(escape $_.url)) | $_.message | [$($_.author.username)](https://github.com/$($_.author.username))" }))} 
+         |-----------|----------------------|----------------|
+        " +
+        [string]::Join("
+        ", $( $commits | Select-Object -Skip 1 | ForEach-Object { "| [$($_.id.Substring(0,8))]($_.url)) | $( $_.message ) | [$($_.author.username)](https://github.com/$($_.author.username))" }))} 
         else { "" }).Trim()
         }
